--- a/sass/utils/_modal.scss
+++ b/sass/utils/_modal.scss
@@ -31,7 +31,7 @@
     border: none;
     top: 50%;
     left: 50%;
-    background-color: var(--white-color-bgc-text);
+    background-color: $white-color-bgc-text;
     transform: translate(-50%, -50%) scale(1);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 1px 1px rgba(0, 0, 0, 0.14),
