--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,169 +1,179 @@
-.footer {
-    padding-top: 60px;
-    padding-bottom: 60px;
-}
-
-.footer__container {
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
-    @media screen and (min-width: $mobile) {
-        width: $mobile;
+    .footer {
+        padding-top: 60px;
+        padding-bottom: 60px;
     }
-    @media screen and (min-width: $tablet) {
-        width: $tablet;
-        display: flex;
-        flex-wrap: wrap;
-        align-items: baseline;
-    }
-    @media screen and (min-width: $desktop) {
-        width: $desktop;
-    }
-}
-
-.footer__contacts {
-    @media screen and (max-width: 1199px) {
-        margin-bottom: 60px;
-        text-align: center;
-    }
-    @media screen and (min-width: $tablet) and (max-width: 1199px) {
-        margin-left: 61px;
-    }
-    @media screen and (min-width: $desktop) {
-        margin-right: 70px;
-    }
-}
-
-.footer__logo {
-    display: block;
-    margin-bottom: 20px;
-}
-
-.address {
-    color: $white-color-bgc-text;
-    font-style: normal;
-    line-height: 1.71;
-}
-
-.address__link {
-    color: $contacts-text-color;
-    text-decoration: none;
-    &:hover,
-    &:focus {
-        color: $accent-color;
-    }
-}
-
-.address__text {
-    margin-bottom: 9px;
-}
-
-.address__item:not(:last-child) {
-    margin-bottom: 9px;
-}
-
-.action {
-    @media screen and (min-width: $tablet) and (max-width: 1199px) {
+    
+    .footer__container {
+        padding-left: 15px;
+        padding-right: 15px;
         margin-left: auto;
-        margin-right: 74px;
-        margin-bottom: 0px;
+        margin-right: auto;
+        @media screen and (min-width: $mobile) {
+            width: $mobile;
+        }
+        @media screen and (min-width: $tablet) {
+            width: $tablet;
+            display: flex;
+            flex-wrap: wrap;
+            align-items: baseline;
+        }
+        @media screen and (min-width: $tablet) and (max-width: 1199px) {
+            justify-content: space-around;
+        }
+        @media screen and (min-width: $desktop) {
+            width: $desktop;
+        }
     }
-    @media screen and (max-width: 1199px) {
-        margin-bottom: 60px;
+    
+    .footer__contacts {
+        @media screen and (max-width: 767px) {
+            margin-bottom: 60px;
+        }
+        @media screen and (max-width: 1199px) {
+            // margin-bottom: 60px;
+            text-align: center;
+        }
+        // @media screen and (min-width: $tablet) and (max-width: 1199px) {
+        //     margin-left: 61px;
+        // }
+        @media screen and (min-width: $desktop) {
+            margin-right: 70px;
+        }
     }
-}
-
-.subscription__title,
-.action__title {
-    font-size: 14px;
-    line-height: 1.14;
-    text-transform: uppercase;
-    margin-bottom: 20px;
-    color: $white-color-bgc-text;
-    @media screen and (max-width: 1199px) {
-        text-align: center;
+    
+    .footer__logo {
+        display: block;
+        margin-bottom: 20px;
     }
-}
-
-.footer__socials {
-    fill: $white-color-bgc-text;
-    background-color: rgba(255, 255, 255, 0.1);
-}
-
-.subscription {
-    @media screen and (min-width: $tablet) and (max-width: 1199px) {
-        margin: 0 auto;
+    
+    .address {
+        color: $white-color-bgc-text;
+        font-style: normal;
+        line-height: 1.71;
     }
-    @media screen and (min-width: $desktop) {
-        margin-left: auto;
+    
+    .address__link {
+        color: $contacts-text-color;
+        text-decoration: none;
+        &:hover,
+        &:focus {
+            color: $accent-color;
+        }
     }
-}
-
-.footer-form {
-    @media screen and (min-width: $desktop) {
-        display: flex;
+    
+    .address__text {
+        margin-bottom: 9px;
     }
-    padding: 0;
-    margin: 0;
-}
-
-.footer-form__label {
-    display: block;
-    width: 450px;
-    @media screen and (min-width: $desktop) {
-        width: 358px;
-        margin-right: 12px;
+    
+    .address__item:not(:last-child) {
+        margin-bottom: 9px;
+    }
+    
+    .action {
+        @media screen and (min-width: $tablet) and (max-width: 1199px) {
+            // margin-left: auto;
+            // // margin-right: 74px;
+            // // margin-bottom: 0px;
+        }
+        @media screen and (max-width: 767px) {
+            margin-bottom: 60px;
+        }
+    }
+    
+    .subscription__title,
+    .action__title {
+        font-size: 14px;
+        line-height: 1.14;
+        text-transform: uppercase;
+        margin-bottom: 20px;
+        color: $white-color-bgc-text;
+        @media screen and (max-width: 1199px) {
+            text-align: center;
+        }
+    }
+    
+    .footer__socials {
+        fill: $white-color-bgc-text;
+        background-color: rgba(255, 255, 255, 0.1);
+    }
+    
+    .subscription {
+        @media screen and (min-width: $tablet) and (max-width: 1199px) {
+            margin-top: 60px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        @media screen and (min-width: $desktop) {
+            margin-left: auto;
+        }
+    }
+    
+    .footer-form {
+        @media screen and (min-width: $desktop) {
+            display: flex;
+        }
+        padding: 0;
+        margin: 0;
+    }
+    
+    .footer-form__label {
+        display: block;
+        @media screen and (min-width: $tablet) {
+            width: 450px;
+        }
+        @media screen and (min-width: $desktop) {
+            width: 358px;
+            margin-right: 12px;
+            height: 50px;
+            margin-bottom: 0px;
+        }
         height: 50px;
-        margin-bottom: 0px;
+        border: none;
+        padding: 0;
+        margin-bottom: 20px;
     }
-    height: 50px;
-    border: none;
-    padding: 0;
-    margin-bottom: 20px;
-}
-
-.footer-form__input {
-    height: 100%;
-    width: 100%;
-    padding: 15px 15px;
-    background-color: inherit;
-    font-size: 16px;
-    line-height: 1.25;
-    color: rgba(255, 255, 255, 0.6);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    box-sizing: border-box;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: 4px;
-    &::placeholder {
+    
+    .footer-form__input {
+        height: 100%;
+        width: 100%;
+        padding: 15px 15px;
+        background-color: inherit;
+        font-size: 16px;
+        line-height: 1.25;
         color: rgba(255, 255, 255, 0.6);
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        box-sizing: border-box;
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+        border-radius: 4px;
+        &::placeholder {
+            color: rgba(255, 255, 255, 0.6);
+        }
     }
-}
-
-.footer-form__btn {
-    display: flex;
-    align-items: center;
-    padding: 0;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 29px;
-    margin: 0 auto;
-    border: none;
-    width: 200px;
-    cursor: pointer;
-    font-family: inherit;
-    border-radius: 4px;
-    background-color: $accent-color;
-    color: $white-color-bgc-text;
-    fill: $white-color-bgc-text;
-    align-items: center;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.87;
-    letter-spacing: 0.06em;
-}
-
-.footer-form__icon {
-    margin-left: 10px;
-    fill: inherit
-}
+    
+    .footer-form__btn {
+        display: flex;
+        align-items: center;
+        padding: 0;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 29px;
+        margin: 0 auto;
+        border: none;
+        width: 200px;
+        cursor: pointer;
+        font-family: inherit;
+        border-radius: 4px;
+        background-color: $accent-color;
+        color: $white-color-bgc-text;
+        fill: $white-color-bgc-text;
+        align-items: center;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 1.87;
+        letter-spacing: 0.06em;
+    }
+    
+    .footer-form__icon {
+        margin-left: 10px;
+        fill: inherit
+    }
