--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -27,6 +27,8 @@
         @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
             background-image: linear-gradient( to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/headerdesktop/headerdesktop2x.jpg);
         }
+    }
+    @media screen and (min-width: $desktop) {
         padding-top: 200px;
         padding-bottom: 200px;
     }
