--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -22,6 +22,9 @@
                 &:nth-last-child(-n + 2) {
                     margin-bottom: 0;
                 }
+                @media screen and (min-width: $tablet) {
+                    margin-bottom: 0;
+                }
             }
             
             .card-set {
