--- a/sass/components/section/_benefits.scss
+++ b/sass/components/section/_benefits.scss
@@ -39,9 +39,11 @@
 .benefits__title {
     font-size: 14px;
     line-height: 1.14;
-    text-align: center;
     text-transform: uppercase;
     margin-bottom: 10px;
+    @media screen and (max-width: 767px) {
+        text-align: center;
+    }
 }
 
 .benefits__text {
