--- a/css/main.css
+++ b/css/main.css
@@ -113,31 +113,6 @@ img {
   border-bottom: 1px solid #ECECEC;
 }
 
-.page-header__container {
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-@media screen and (min-width: 480px) {
-  .page-header__container {
-    width: 480px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .page-header__container {
-    width: 768px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .page-header__container {
-    width: 1200px;
-  }
-}
-
 .page-header__nav {
   width: 100%;
   display: -webkit-box;
@@ -202,6 +177,10 @@ img {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin-left: 88px;
   }
 }
@@ -327,8 +306,6 @@ img {
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .contacts {
-    padding-top: 21px;
-    padding-bottom: 21px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
@@ -1058,7 +1035,15 @@ img {
 }
 
 .card-set__link {
-  display: block;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   height: 100%;
   color: #212121;
   text-decoration: none;
@@ -1069,6 +1054,10 @@ img {
   padding-bottom: 20px;
   padding-left: 24px;
   padding-right: 24px;
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .card-set__box {
@@ -1079,7 +1068,7 @@ img {
 .card-set__overlay {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 101%;
   padding: 63px 24px;
   left: 0;
   top: 0;
@@ -1127,22 +1116,8 @@ img {
   padding-bottom: 60px;
 }
 
-.footer__container {
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-@media screen and (min-width: 480px) {
-  .footer__container {
-    width: 480px;
-  }
-}
-
 @media screen and (min-width: 768px) {
   .footer__container {
-    width: 768px;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -1162,12 +1137,6 @@ img {
     -webkit-justify-content: space-around;
         -ms-flex-pack: distribute;
             justify-content: space-around;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .footer__container {
-    width: 1200px;
   }
 }
 
