--- a/sass/base/_base_style.scss
+++ b/sass/base/_base_style.scss
@@ -4,13 +4,13 @@
     margin-left: auto;
     margin-right: auto;
     @media screen and (min-width: $mobile) {
-        width: 480px;
+        width: $mobile;
     }
     @media screen and (min-width: $tablet) {
-        width: 768px;
+        width: $tablet;
     }
     @media screen and (min-width: $desktop) {
-        width: 1200px;
+        width: $desktop;
     }
 }
 
