--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -62,7 +62,9 @@
             }
             
             .card-set__link {
-                display: block;
+                // display: block;
+                display: flex;
+                flex-direction: column;
                 height: 100%;
                 color: $primary-text-color;
                 text-decoration: none;
@@ -73,6 +75,7 @@
                 padding-bottom: 20px;
                 padding-left: 24px;
                 padding-right: 24px;
+                flex-grow: 1;
             }
             
             .card-set__box {
@@ -83,7 +86,7 @@
             .card-set__overlay {
                 position: absolute;
                 width: 100%;
-                height: 100%;
+                height: 101%;
                 padding: 63px 24px;
                 left: 0;
                 top: 0;
